# AI-Augmented-OS-Scheduler

dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  api.js
dashboard/src/components/: GanttChart.jsx  MetricsChart.jsx
datasets/: dataset_balanced.csv  dataset_edge_case.csv  dataset_stress.csv  generate_dataset.py  sample_processes.csv  test1.csv  test2.csv
ml-predictor/: predictor.py  requirements.txt  train.py
scheduler-core/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
scheduler-core/backend/: package-lock.json  package.json  server.js
scheduler-core/src/: csv_loader.cpp  csv_loader.h  dataset_loader.cpp  main.cpp  onnx_predictor.cpp  onnx_predictor.h  predictor.h  process.cpp  process.h  result.h  scheduler.cpp  scheduler.h
